using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorConfig
{
    public const string plant_Attack = "Attack";
    public const string plant_Produce = "Produce";
    public const string plant_Explode = "Explode";
    public const string plant_HealthPercentage = "HealthPercentage";
    public const string plant_underAttack = "UnderAttack";
    public const string plant_selected = "Selected";
    public const string plant_twinkle = "Twinkle";

    public const string zombie_game = "Game";
    public const string zombie_isAttack = "isAttack";
    public const string zombie_healthPercentage = "HealthPercentage";
    public const string zombie_armor1HealthPercentage = "Armor1HealthPercentage";
    public const string zombie_underAttack = "UnderAttack";
    public const string zombie_dieMode = "DieMode";
    public const string zombie_speedLevel = "SpeedLevel";
    public const string zombie_speedRatio = "SpeedRatio";

    public const string pea_used = "Used";

    public const string clicked = "Clicked";
}
